Change log
==========

1.16 (unreleased)
-----------------


1.15 (2014-11-21)
-----------------
- switched documentation to point to the new Git repository
- use new bootstrap.py script


1.14 (2011-11-29)
-----------------
- Add a flag ``-m``/``--max-tags`` to set the number of package
  versions (tags) to be shown on the generated main page. If more
  tags exist, a link to a separate page is provided that shows all
  versions.


1.13 (2011-10-31)
-----------------
- Catch additional errors upon building
- Ignoring empty tag lists when asking Git for tags


1.12 (2011-08-30)
-----------------
- Be more resilient when simple ReST text compilation or 
  Sphinx building fails. Now the whole documentation build 
  process won't just fail at that point.
- provide more meaningful log messages when running with 
  the ``-v`` option.


1.11 (2011-08-09)
-----------------
- Now you can use ``Git`` alongside ``Mercurial`` and 
  ``Subversion`` to use as version control system.


1.10 (2011-08-09)
-----------------
- Taking more control of logging by defining our own logger and
  suppressing standard Sphinx log output. The new script flag 
  ``-v`` or ``--verbose`` enables the user to determine what to 
  show. Without it, only serious warnings are shown. With ``-v``
  specified once you will see script progress output and notes 
  about Sphinx build warnings. With ``-vv`` all Sphinx output 
  is shown as well.


1.9 (2011-08-09)
----------------
- Now using pkg_resources.parse_version to parse the tag names and 
  produce correct release ordering for each package
- Instead of using a flag to set the revision control system 
  across all packages you now specify the revision control system 
  per package with a simple prefix::

    [hg]http://myserver/hg/mypackage
    [svn]https://myservr/svnmypackage

  For backwards compatibility, all URLs without prefix are assumed 
  to point to a Subversion repository.


1.8 (2011-08-05)
----------------