@@ -10,6 +10,7 @@ parts =
 
 [docbuilderdocs]
 recipe = dataflake.docbuilder
+copy-output = true
 eggs =  
   pkginfo
 sources =
